# Snowline

./: .gitignore  .snowline  README.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: deferred-capability.yml
dashboard/: .gitignore  ACCESSIBILITY.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/scripts/: promote-dist.mjs  validate-tokens.mjs
dashboard/src/: App.tsx  api.ts  app.css  main.tsx  prefs.ts  registry.ts  tokens.css  useData.ts
dashboard/src/kinds/: kinds.tsx
dashboard/src/pages/: Home.tsx  PluginPage.tsx  Plugins.tsx  Scopes.tsx  Surfaces.tsx
dashboard/src/shell/: Layout.tsx
dashboard/tests/: a11y.test.tsx  actions.test.tsx  board.test.tsx  composer.test.tsx  helpers.tsx  keyboard.test.tsx  polling.test.tsx  registered-ui.test.tsx  scope-field.test.tsx  setup.ts
docs/ops/: remote-front-runbook.md  roam-runbook.md
docs/specs/: architecture.md  deploy-continuity.md  gateway.md  governance-plugin.md  health.md  memory-plugin.md  milestones.md  replication-continuity.md  scope-namespace.md  shadow-conversations.md  ui-shell.md
governance/: alembic.ini  pyproject.toml
governance/src/snowline_governance/: __init__.py  app.py  artifacts.py  branching.py  concurrence.py  config.py  contract.py  db.py  decisions.py  graduation.py  mcp_surface.py  milestone_client.py  models.py  registration.py  replication.py  replication_apply.py  replication_stream.py  scope_client.py  shadow.py  turns.py  ui_api.py
governance/src/snowline_governance/migrations/: env.py
governance/src/snowline_governance/migrations/versions/: a6b7c8d9e0f1_mark_compatible.py  b1c2d3e4f5a6_genesis_decisions.py  b7c8d9e0f1a2_artifact_version_milestone.py  c2d3e4f5a6b7_artifacts.py  d3e4f5a6b7c8_shadow_graph.py  e4f5a6b7c8d9_webhook_bus.py  f5a6b7c8d9e0_replication_stream.py
governance/tests/: conftest.py  test_app.py  test_app_http.py  test_artifacts.py  test_contract_drift.py  test_decisions.py  test_graduation.py  test_import_purity.py  test_registration.py  test_replication.py  test_replication_apply.py  test_replication_stream.py  test_scope_client.py  test_shadow.py  test_turns.py  test_ui_api.py
memory/: alembic.ini  pyproject.toml
memory/scripts/: import_claude_memories.py
memory/src/snowline_memory/: __init__.py  app.py  config.py  db.py  mcp_surface.py  memory.py  models.py  registration.py
memory/src/snowline_memory/migrations/: env.py
memory/src/snowline_memory/migrations/versions/: a1b2c3d4e5f6_genesis_memories.py  b2c3d4e5f6a7_lww_tombstones.py  c3d4e5f6a7b8_replication_tables.py
memory/tests/: conftest.py  test_app_http.py  test_conftest_helpers.py  test_import_purity.py  test_importer.py  test_memory.py  test_registration.py  test_replication.py
memory/tests/fixtures/: MEMORY.md  mcp-is-default-surface.md  no-frontmatter.md  verify-with-npm-build.md
ops/remote-front/: .dockerignore  Dockerfile  README.md  env.example  fly.toml  pyproject.toml  start.sh
ops/remote-front/src/snowline_remote_front/: __init__.py  __main__.py  app.py  config.py  login.py  provider.py  proxy.py  store.py  tokens.py
ops/remote-front/tests/: _helpers.py  conftest.py  test_dcr.py  test_metadata.py  test_oauth_flow.py  test_proxy.py  test_store_and_config.py
ops/roam/: env.primary.example  env.roam.example  run-service.sh  seed-config.example.json  tailscale-serve.sh
ops/roam/launchd/: dev.snowline.roam.governance.plist  dev.snowline.roam.memory.plist  dev.snowline.roam.platform.plist
sdk/: pyproject.toml
sdk/src/snowline_plugin_sdk/: __init__.py  contract.py  events.py  registration.py  testing.py  ui.py
sdk/src/snowline_plugin_sdk/replication/: __init__.py  admin.py  emit.py  envelope.py  ingest.py  models.py
sdk/tests/: conftest.py  test_contract.py  test_events.py  test_import_purity.py  test_registration.py  test_replication_admin.py  test_replication_delivery.py  test_replication_emit.py  test_replication_ingest.py  test_replication_roundtrip.py  test_ui.py
src/snowline_platform/: __init__.py  app.py  config.py  db.py  gateway.py  gateway_app.py  health.py  manifest.py  middleware.py  milestones.py  milestones_routes.py  models.py  platform_tools.py  plugins_routes.py  registry.py  replication.py  replication_pairing.py  replication_seed.py  scopes.py  scopes_routes.py  surfaces_routes.py  trust.py  ui_api.py
src/snowline_platform/cli/: __init__.py
src/snowline_platform/migrations/: env.py
src/snowline_platform/migrations/versions/: a1b2c3d4e5f6_genesis_scopes.py  c3d9f1a2b4e6_adopt_replication_contract.py  d4e6f8a0b2c4_milestone_registry.py  e5f7a9b1c3d5_milestone_replication.py
tests/: _gateway_helpers.py  _replication_helpers.py  conftest.py  test_app_boot.py  test_config.py  test_conftest_helpers.py  test_gateway.py  test_gateway_app.py  test_gateway_governance.py  test_gateway_retry.py  test_health.py  test_import_purity.py  test_manifest.py  test_middleware.py  test_milestones_merge_deps.py  test_milestones_replication.py  test_milestones_routes.py  test_milestones_service.py  test_platform_tools.py  test_plugins_routes.py  test_registry.py  test_replicate_cli.py  test_replication_manifest.py  test_replication_pairing.py  test_replication_seed.py  test_replication_self_manifest.py  test_scopes_replication.py  test_scopes_routes.py  test_scopes_service.py  test_surfaces_routes.py  test_trust.py  test_ui_api_routes.py  test_ui_contract_drift.py
