[project]
name = "snowline-platform"
version = "0.0.1"
description = "Snowline — an agent-native platform that hosts governance, PM, and other capabilities as MCP-server plugins."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
]

[dependency-groups]
# `snowline-governance` is a workspace MEMBER, not a runtime dependency of the
# platform (dependency direction: the platform depends on NO plugin —
# architecture §2). It rides the dev group so a plain `uv sync` from the repo
# root installs it for development + the combined test run, without coupling the
# platform's runtime to a plugin.
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "snowline-governance",
    # The published plugin SDK rides the dev group so governance's contract
    # drift-guard test (`governance/tests/test_contract_drift.py`) can import it
    # to pin the producer↔consumer wire contract. It is the published, light
    # dependency external plugins install — NOT a platform runtime dep.
    "snowline-plugin-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowline_platform"]

# The repo is a uv workspace: the platform stays the ROOT package (at the repo
# root, src/snowline_platform), and each plugin is a workspace member under its
# own directory. The first member is `governance` — the flagship plugin, its own
# package + DB + alembic chain. `uv sync` resolves the whole workspace at once.
[tool.uv.workspace]
members = ["governance", "sdk"]

[tool.uv.sources]
snowline-governance = { workspace = true }
snowline-plugin-sdk = { workspace = true }

[tool.pytest.ini_options]
# Run both the platform's tests (tests/) and the governance member's
# (governance/tests/) in one `uv run python -m pytest` from the repo root.
testpaths = ["tests", "governance/tests", "sdk/tests"]
# importlib mode: the two test trees each have a `conftest.py` and a
# `test_import_purity.py` (same basename, different dir). The default prepend
# import mode collides on the basename / package name; importlib imports each by
# file path, so the two trees coexist without `__init__.py` gymnastics.
addopts = "--import-mode=importlib"
