[project]
name = "snowline-platform"
version = "0.0.1"
description = "Snowline — an agent-native platform that hosts governance, PM, and other capabilities as MCP-server plugins."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    # The `snowline replicate` CLI (issue #82) is an HTTP client of the SDK
    # replication-admin surface; the gateway/health/ui-api paths already import
    # httpx at runtime, so this promotes it to a declared runtime dependency.
    "httpx>=0.27",
    # The platform dogfoods the replication contract it offers plugins (spec
    # §8, issue #81): scopes adopt the SAME SDK emit/ingest modules, the same
    # pairing step, the same watermark semantics. Unlike governance/memory/pm,
    # the platform is not an external plugin — it is the SDK's own publisher —
    # so depending on it at RUNTIME (not just dev, as the drift-guard test
    # does) is the legitimate dependency direction (architecture §4).
    "snowline-plugin-sdk[replication]",
]

# The operator CLI (replication pairing + seeding, §5/§7, issue #82). `snowline
# replicate pair|seed|reseed-check` — deliberately a CLI, never MCP (§5).
[project.scripts]
snowline = "snowline_platform.cli:main"

[dependency-groups]
# `snowline-governance` is a workspace MEMBER, not a runtime dependency of the
# platform (dependency direction: the platform depends on NO plugin —
# architecture §2). It rides the dev group so a plain `uv sync` from the repo
# root installs it for development + the combined test run, without coupling the
# platform's runtime to a plugin.
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "snowline-governance",
    # `snowline-memory` is a workspace MEMBER too (same dependency direction:
    # the platform depends on no plugin). It rides the dev group so a plain
    # `uv sync` installs it for the combined test run.
    "snowline-memory",
    # `snowline-remote-front` (ops/remote-front, issue #120) is a workspace
    # MEMBER too — the OAuth-terminating public MCP front. Same dependency
    # direction (the platform depends on no ops package): it rides the dev group
    # so `uv sync` installs it for the combined test run. It shares NO runtime
    # code with the platform (it's a standalone ASGI app in front of the
    # gateway), so it stays out of the platform's runtime deps.
    "snowline-remote-front",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowline_platform"]

# The repo is a uv workspace: the platform stays the ROOT package (at the repo
# root, src/snowline_platform), and each plugin is a workspace member under its
# own directory. The first member is `governance` — the flagship plugin, its own
# package + DB + alembic chain. `uv sync` resolves the whole workspace at once.
[tool.uv.workspace]
members = ["governance", "memory", "sdk", "ops/remote-front"]

[tool.uv.sources]
snowline-governance = { workspace = true }
snowline-memory = { workspace = true }
snowline-plugin-sdk = { workspace = true }
snowline-remote-front = { workspace = true }

[tool.pytest.ini_options]
# Run every workspace member's tests in one `uv run python -m pytest` from the
# repo root.
testpaths = ["tests", "governance/tests", "memory/tests", "sdk/tests", "ops/remote-front/tests"]
# importlib mode: the platform/governance/memory/sdk trees each have a
# `test_import_purity.py`, most trees have a `conftest.py`, and remote-front's
# import-purity check lives inside its `tests/test_store_and_config.py` (same
# basenames, different dirs). The default prepend import mode collides on the
# basename / package name; importlib imports each by file path, so the trees
# coexist without `__init__.py` gymnastics.
addopts = "--import-mode=importlib"
