[project]
name = "snowline-memory"
version = "0.0.1"
description = "Snowline memory plugin — cross-folder agent session memory (remember / recall / digest) as a registered MCP-server plugin over its own store."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    # The MCP surface (FastMCP, streamable HTTP) — mirrors governance.
    "mcp>=1.2",
    # Registers with the platform over HTTP via the shared registration
    # heartbeat (issue #50); the `[client]` extra pulls httpx + anyio. Memory has
    # no OTHER httpx use, so it needs no direct httpx dependency of its own.
    "snowline-plugin-sdk[client]",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowline_memory"]

[tool.uv.sources]
# `snowline-plugin-sdk` is a workspace MEMBER (repo-root pyproject declares the
# workspace); wire it as such so `uv sync` resolves the local source.
snowline-plugin-sdk = { workspace = true }
